--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,18 +1,16 @@
 // app global css in SCSS form
 
 // app global css in SCSS form
-.apple-card, .apple-card-hover {
+.apple-card,
+.apple-card-hover {
   border-radius: 18px;
-  background: #FFF !important;
-  box-shadow: 2px 4px 12px rgba(0, 0, 0, .08);
-  transition: all .3s cubic-bezier(0, 0, .5, 1);
+  background: #fff !important;
+  box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.08);
+  transition: all 0.3s cubic-bezier(0, 0, 0.5, 1);
   padding-bottom: 16px;
-
 }
 
-
 .apple-card-hover:hover {
-  box-shadow: 2px 4px 16px rgba(0, 0, 0, .16);
-  transform: scale3d(1.01, 1.01, 1.01)
-
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.16);
+  transform: scale3d(1.01, 1.01, 1.01);
 }
